add new website from server na

--- a/xem-phim-moi/rua-toi-cho-quy/index.html
+++ b/xem-phim-moi/rua-toi-cho-quy/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1787,40 +1787,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhip-dieu-hip-hop-phap" title="Nhịp điệu Hip hop: Pháp">
+          <a class="list-top-movie-link" href="/phim-moi/tieu-biet-ly" title="Tiểu Biệt Ly">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhip-dieu-hip-hop-phap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieu-biet-ly-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhịp điệu Hip hop: Pháp
+             Tiểu Biệt Ly
             </span>
             <span class="list-top-movie-item-en">
-             Rhythm + Flow France
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-giet-con-gai-toi" title="Kẻ giết con gái tôi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-giet-con-gai-toi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Kẻ giết con gái tôi
-            </span>
-            <span class="list-top-movie-item-en">
-             My Daughter’s Killer
+             A Love for Separation
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1831,18 +1809,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/true-ngay-tinh-ban" title="True: Ngày tình bạn">
+          <a class="list-top-movie-link" href="/phim-moi/zola" title="Zola">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/true-ngay-tinh-ban-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/zola-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             True: Ngày tình bạn
+             Zola
             </span>
             <span class="list-top-movie-item-en">
-             True: Friendship Day
+             Zola
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/firefly-lane" title="Firefly Lane">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/firefly-lane-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Firefly Lane
+            </span>
+            <span class="list-top-movie-item-en">
+             Firefly Lane
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1853,21 +1853,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thuoc-noi-that" title="Thuốc nói thật">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-pho-cua-co-ay" title="Thành Phố Của Cô Ấy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuoc-noi-that-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-pho-cua-co-ay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thuốc nói thật
+             Thành Phố Của Cô Ấy
             </span>
             <span class="list-top-movie-item-en">
-             Truth-telling drug
+             Her World
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1875,18 +1875,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giang-ho-tre-tuoi" title="Giang Hồ Trẻ Tuổi">
+          <a class="list-top-movie-link" href="/phim-moi/anh-trang-sang-than-yeu" title="Ánh Trăng Sáng Thân Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-ho-tre-tuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-trang-sang-than-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giang Hồ Trẻ Tuổi
+             Ánh Trăng Sáng Thân Yêu
             </span>
             <span class="list-top-movie-item-en">
-             White Boy Rick
+             Moonlight
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
