add new website from server na

--- a/xem-phim-bo/bung-chay-nao-co-gai-bong-chuyen/index.html
+++ b/xem-phim-bo/bung-chay-nao-co-gai-bong-chuyen/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1650,18 +1650,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lai-la-mot-ngay-lam-viec-cham-chi-2" title="Lại Là Một Ngày Làm Việc Chăm Chỉ 2">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-doi-ninja" title="Người Dơi Ninja">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lai-la-mot-ngay-lam-viec-cham-chi-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-doi-ninja-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lại Là Một Ngày Làm Việc Chăm Chỉ 2
+             Người Dơi Ninja
             </span>
             <span class="list-top-movie-item-en">
-             Another Hard Day 2
+             Batman Ninja
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1672,40 +1672,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhoc-can-sa" title="Nhóc Cần Sa">
+          <a class="list-top-movie-link" href="/phim-moi/dem-cua-nhung-xac-chet" title="Đêm Của Những Xác Chết">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhoc-can-sa-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-cua-nhung-xac-chet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhóc Cần Sa
+             Đêm Của Những Xác Chết
             </span>
             <span class="list-top-movie-item-en">
-             Kid Cannabis
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-hau-thu-cuoi-hay-nghi-phan-2" title="Tối hậu thư: Cưới hay nghỉ (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-hau-thu-cuoi-hay-nghi-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tối hậu thư: Cưới hay nghỉ (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             The Ultimatum: Marry or Move On (Season 2)
+             Night of the Living Dead
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1716,43 +1694,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-xung-dang" title="Người xứng đáng">
+          <a class="list-top-movie-link" href="/phim-moi/an-so-ve-chung-ta" title="Ẩn Số Về Chúng Ta">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-xung-dang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/an-so-ve-chung-ta-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người xứng đáng
+             Ẩn Số Về Chúng Ta
             </span>
             <span class="list-top-movie-item-en">
-             The Worthy
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-diet-vong-phan-4" title="Biệt Đội Diệt Vong (Phần 4)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-diet-vong-phan-4-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Biệt Đội Diệt Vong (Phần 4)
-            </span>
-            <span class="list-top-movie-item-en">
-             Doom Patrol Season 4
+             Unknown
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/me-ke-xinh-dep" title="Mẹ Kế Xinh Đẹp">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-ke-xinh-dep-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mẹ Kế Xinh Đẹp
+            </span>
+            <span class="list-top-movie-item-en">
+             Stepmom
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/paprika" title="Paprika">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/paprika-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Paprika
+            </span>
+            <span class="list-top-movie-item-en">
+             Paprika
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
