add new website from server na

--- a/xem-phim-bo/phai-chang-la-dinh-menh/index.html
+++ b/xem-phim-bo/phai-chang-la-dinh-menh/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1653,40 +1653,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hao-quang-nghiet-nga-phan-1" title="Hào Quang Nghiệt Ngã (Phần 1)">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hao-quang-nghiet-nga-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hào Quang Nghiệt Ngã (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Hidden Truths (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-chong-dan-choi" title="Vợ Chồng Dân Chơi">
+          <a class="list-top-movie-link" href="/phim-moi/samaritan" title="Samaritan">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-chong-dan-choi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/samaritan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vợ Chồng Dân Chơi
+             Samaritan
             </span>
             <span class="list-top-movie-item-en">
-             Mr and Mrs Player
+             Samaritan
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1697,18 +1675,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sac-thai-cua-trai-tim" title="SẮC THÁI CỦA TRÁI TIM">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-giay-cao-got" title="Thám Tử Giày Cao Gót">
            <span class="status">
-            HD vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sac-thai-cua-trai-tim-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-giay-cao-got-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             SẮC THÁI CỦA TRÁI TIM
+             Thám Tử Giày Cao Gót
             </span>
             <span class="list-top-movie-item-en">
-             Shades of the Heart
+             Man On High Heels
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1719,21 +1697,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/my-little-pony-tinh-ban-dieu-ky" title="My Little Pony: Tình bạn diệu kỳ">
+          <a class="list-top-movie-link" href="/phim-moi/ac-mong-3096-ngay" title="Ác Mông 3096 Ngày">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-little-pony-tinh-ban-dieu-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-mong-3096-ngay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             My Little Pony: Tình bạn diệu kỳ
+             Ác Mông 3096 Ngày
             </span>
             <span class="list-top-movie-item-en">
-             My Little Pony: Friendship Is Magic
+             3096 Days
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1741,18 +1719,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/titanic" title="Titanic">
+          <a class="list-top-movie-link" href="/phim-moi/ruoc-vo-don-loc" title="RƯỚC VỢ ĐÓN LỘC">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/titanic-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ruoc-vo-don-loc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Titanic
+             RƯỚC VỢ ĐÓN LỘC
             </span>
             <span class="list-top-movie-item-en">
-             Titanic
+             Best Bet
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thi-tran-paper" title="Thị Trấn Paper">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-paper-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thị Trấn Paper
+            </span>
+            <span class="list-top-movie-item-en">
+             Paper Towns
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
