add new website from server na

--- a/xem-phim-moi/than-mo/index.html
+++ b/xem-phim-moi/than-mo/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1722,21 +1722,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-cuoi-cung-cua-cac-co-gai" title="Hành trình cuối cùng của các cô gái">
+          <a class="list-top-movie-link" href="/phim-moi/khi-ta-con-tre" title="Khi Ta Còn Tre">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-cuoi-cung-cua-cac-co-gai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-ta-con-tre-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hành trình cuối cùng của các cô gái
+             Khi Ta Còn Tre
             </span>
             <span class="list-top-movie-item-en">
-             The End Girl Trip
+             While We're Young
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1744,21 +1744,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ma-lang-thang-2" title="Ma Lang Thang 2">
+          <a class="list-top-movie-link" href="/phim-moi/chia-khoa-xuong-nguoi" title="Chìa Khóa Xương Người">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ma-lang-thang-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chia-khoa-xuong-nguoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ma Lang Thang 2
+             Chìa Khóa Xương Người
             </span>
             <span class="list-top-movie-item-en">
-             Hocus Pocus 2
+             The Skeleton Key
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1766,40 +1766,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xa-hoi-thuong-luu" title="Xã Hội Thượng Lưu">
+          <a class="list-top-movie-link" href="/phim-moi/qua-bi-mat" title="Quả Bí Mật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xa-hoi-thuong-luu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-bi-mat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xã Hội Thượng Lưu
+             Quả Bí Mật
             </span>
             <span class="list-top-movie-item-en">
-             High Society
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-nghi-dang-so" title="Nhà Nghỉ Đáng Sợ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-nghi-dang-so-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhà Nghỉ Đáng Sợ
-            </span>
-            <span class="list-top-movie-item-en">
-             Hotel Fear
+             All About Secrets
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1810,18 +1788,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/minh-nguyet-tung-chieu-giang-dong-han" title="Minh Nguyệt Từng Chiếu Giang Đông Hàn">
+          <a class="list-top-movie-link" href="/phim-moi/suoi-ma" title="Suối ma">
            <span class="status">
-            HD Vietsub + Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/minh-nguyet-tung-chieu-giang-dong-han-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suoi-ma-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Minh Nguyệt Từng Chiếu Giang Đông Hàn
+             Suối ma
             </span>
             <span class="list-top-movie-item-en">
-             The Moon Brightens for You
+             Secrets in the Hot Spring
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/kenh-tin-tuc" title="Kênh Tin Tức">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kenh-tin-tuc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Kênh Tin Tức
+            </span>
+            <span class="list-top-movie-item-en">
+             Rann
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
